[package]
name = "baaloo-password-generator"
version = "0.0.1"
description = "A secure, and flexible password generator"
authors = ["iam.amanxz@gmail.com"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
regex = "1"
rand = "0.8.5"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
